# incubator

./: LICENSE.txt  README.md
ROSE/apps/gadget-toybox/: Cargo.toml
ROSE/apps/reader/: lorem-ipsum.txt
ROSE/services/bitblt/: Cargo.toml
U4/: PRD.md  README.md
compiler/: compile.py  requirements-3.txt  test.txt
compiler/ddcg-test/: README.md  compile.py
compiler/ddcg-test/65816/: compile.py  test.a65  test.txt
compiler/ddcg-test/z80/: test.txt  test.z80
compiler/hlxa/: CMakeLists.txt  assembler.c  assembler.h  build.sh  dc_context.c  dc_context.h  hlxa.c  hlxa.h  reader.c  reader.h  section.c  section.h  slice.c  slice.h  statement.c  statement.h  test.c
compiler/oil/: README.md
compiler/pl65k/: README.md
compiler/roil/: Cargo.toml  README.md
compiler/stc-test/: README.md  colon.fs  compiler.fs  errors.txt  hw.f  strings.fs  symtab.fs  utilities.fs
cp.rv32/: README.md  boot.asm  equates.asm
hierarchical-fs/: CMakeLists.txt  README.md  canonicalize.c  cli-test.c  cli.c  clifns.h  skipws.c  stripcmd.c  t-canonicalize.c  t-stripcmd.c
hierarchical-fs/cli/: CMakeLists.txt  README.md  ascend.c  canonicalize.c  cli.c  clifns.h  do_cd.c  do_pwd.c  evalcl.c  skipws.c  t-ascend.c  t-canonicalize.c  t-skipws.c
hierarchical-fs/dm/: CMakeLists.txt  DmChangeDir.c  DmCurrentDir.c  DmExpunge.c  DmInitialize.c  README.md
hierarchical-fs/include/: dm.h
hierarchical-fs/man/man0/: DmAnchorBlock.0dmstruct  DmChangeDir.0dmsub  DmCurrentDir.0dmsub  DmExpunge.0dmsub  DmInitialize.0dmsub  DmNode.0dmstruct  ascend.0clisub  ascend.0subr  canonicalize.0clisub  canonicalize.0subr  cd.0cmd  evalcl.0clisub  evalcl.0subr  exit.0cmd  pwd.0cmd  skipws.0clisub  skipws.0subr  stripcmd.0clisub  stripcmd.0subr
productivity/: README.md
productivity/clock-demo/: Cargo.toml
productivity/sdlstate/: Cargo.toml
productivity/services/stencil/: Cargo.toml
productivity/services/stencil/src/: lib.rs  printer.rs  stencil.rs  sysfont_bsw_9.rs  utils.rs
rv32c64/: README.md  boot.asm  cli.asm  equates.asm  hal.asm  macros.asm  nucleus.asm
ssh-client-in-rust/: Cargo.toml
ssh-client-in-rust/src/: main.rs  remote_pc.rs
vm-ecosystem/: README.md
vm-ecosystem/vmasm/: debug.fs  vmasm.fs
vm-ecosystem/vmos/: Cargo.toml  fff.asm
(+65 files in other folders)
